doc: Fixed swagger doc for get/sectors/{sectorId} API
